infra/blog-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-backend
  template:
    metadata:
      labels:
        app: blog-backend
    spec:
      containers:
        - name: blog-backend
          image: franciscoserrano/blog-backend
---
apiVersion: v1
kind: Service
metadata:
  name: blog-backend-srv
spec:
  selector:
    app: blog-backend
  ports:
    - name: blog-backend
      protocol: TCP
      port: 8080
      targetPort: 8080
