infra/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: blog-backend.dev
      http:
        paths:
          - path: /unknown/ping
            backend:
              serviceName: blog-backend-srv
              servicePort: 8080
